# reporting-engine

./: .copier-answers.yml  .gitignore  .hgignore  .hgtags  .isort.cfg  .pre-commit-config.yaml  .travis.yml  LICENSE  README  README.md  __init__.py  __manifest__.py  __openerp__.py  checklog-odoo.cfg  ir_report.py  ir_report.xml  localstart.sh  menu.xml  oca_dependencies.txt  py3o_parser.py  py3o_report.py  py3o_report_modif.py  py3o_server.xml  py3o_template.py  py3o_template.xml  requirements.txt  test-requirement.txt  test-requirements.txt  test_requirements.txt
account_invoice_report_grouped_by_picking/: README.rst  __manifest__.py
base_comment_template/: README.rst  __init__.py  __manifest__.py  __openerp__.py  comment.py  comment_view.xml
base_report_assembler/: __init__.py  __openerp__.py  assembled_report.py  ir_report.py  report_assembler.py
base_report_xlsx/: README.rst
bi_sql_editor/: README.rst  __init__.py  __manifest__.py  __openerp__.py  hooks.py
bi_sql_editor_aggregate/: README.rst  __manifest__.py
bi_sql_editor_server_actions/: README.rst  __manifest__.py
bi_view_editor/: README.rst  __init__.py  __manifest__.py  __openerp__.py  hooks.py
bi_view_editor_spreadsheet_dashboard/: README.rst  __init__.py  __manifest__.py
board_eval_context/: README.rst  __manifest__.py
company_report_logo/: __openerp__.py
config/: config.yml  local.conf
data/: project_group_data.xml  project_stage_data.xml  py3o.fusion.filetype.csv
i18n/: vi_VN.po
kpi/: README.rst  __manifest__.py
kpi_dashboard/: README.rst  __manifest__.py
kpi_dashboard_altair/: README.rst  __manifest__.py
kpi_dashboard_bokeh/: README.rst  __manifest__.py
kpi_dashboard_test/: README.rst  __manifest__.py
setup/_metapackage/: VERSION.txt  pyproject.toml  setup.py
(+4419 files in other folders)
